# cpnest-bilby

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/cpnest_bilby/: __init__.py  plugin.py
tests/: conftest.py  test_bilby_integration.py  test_sampler_class.py
