[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cpnest-bilby"
authors = [
    {name = "Michael J. Williams", email = "michaeljw1@googlemail.com"},
    {name = "John Veitch", email = "john.veitch@ligo.org"}
]
description = "Plugin for using cpnest with bilby."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "bilby>=2.3.0",
    "cpnest>=0.9.4",
    "numpy>=1.18.0",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools_scm]

[project.entry-points."bilby.samplers"]
cpnest = "cpnest_bilby.plugin:CPNest"

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
extend-select = ["I"]
